--- a/petsecommerce/src/main/resources/templates/home.html
+++ b/petsecommerce/src/main/resources/templates/home.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Início</title>
 </head>
 <body>
-    <h1>Home</h1>
+	<div th:replace="~{fragments/base :: navbar}"></div>
+
+	<h1>Home</h1>
+
 </body>
 </html>
