--- a/petsecommerce/src/main/resources/templates/home.html
+++ b/petsecommerce/src/main/resources/templates/home.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" th:href="@{/css/fragments/fragment.css}">
 	<title>Início</title>
 </head>
 <body>
