--- a/petsecommerce/src/main/resources/templates/fragments/base.html
+++ b/petsecommerce/src/main/resources/templates/fragments/base.html
@@ -1,4 +1,4 @@
-<nav th:fragment="navbar" class="navbar">
+<header th:fragment="navbar" class="navbar">
     <div class="logo">
         <img th:src="@{/pictures/logo/logo-menor-sem-fundo.png}" alt="Logo">
     </div>
@@ -20,4 +20,4 @@
         <li><a href="#">Register</a></li>
         <li><a href="#">Login</a></li>
     </ul>
-</nav>
+</header>
