feat: terminate register layout

--- a/petsecommerce/src/main/resources/templates/fragments/base.html
+++ b/petsecommerce/src/main/resources/templates/fragments/base.html
@@ -6,7 +6,7 @@
     </div>
 
     <ul class="main-links">
-        <li><a href="#">Início</a></li>
+        <li><a th:href="@{/}">Início</a></li>
         <li><a href="#">Produtos</a></li>
         <li><a href="#">Loja</a></li>
         <li><a href="#">Projeto</a></li>
@@ -19,8 +19,8 @@
     </div>
 
     <ul class="acc-links">
-        <li><a href="#">Register</a></li>
-        <li><a href="#">Login</a></li>
+        <li><a th:href="@{/register}">Cadastro</a></li>
+        <li><a th:href="@{/login}">Entrar</a></li>
     </ul>
 </header>
 
