--- a/petsecommerce/src/main/resources/templates/register.html
+++ b/petsecommerce/src/main/resources/templates/register.html
@@ -61,7 +61,7 @@
 
                 <div class="form-other">
                     <a href="#">Esqueci minha senha</a>
-                    <a href="#">Já tenho um registro</a>
+                    <a th:href="@{/login}">Já tenho um registro</a>
                 </div>
             </form>
         </div>
