--- a/petsecommerce/src/main/resources/templates/home.html
+++ b/petsecommerce/src/main/resources/templates/home.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" th:href="@{/css/fragments/fragment.css}">
 	<link rel="stylesheet" th:href="@{/css/home/style.css}">
-	<title>Início</title>
+	<title>Pets - Início</title>
 </head>
 <body>
 	<div th:replace="~{fragments/base :: navbar}"></div>
