feat: create dto, controller and HTML form for categories

--- a/petsecommerce/src/main/resources/templates/admin/create-product.html
+++ b/petsecommerce/src/main/resources/templates/admin/create-product.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin - create product</title>
+    <title>Admin - Adicionar produto</title>
 </head>
 <body>
     <form method="post">
@@ -14,8 +14,8 @@
         <input type="text" placeholder="Tamanho" name="size"><br>
         <div>
             <label>Produto em oferta:</label><br>
-            Sim<input type="radio" name="offer">
-            Não<input type="radio" name="offer">
+            Não<input type="radio" name="offer" value="false" checked="true">
+            Sim<input type="radio" name="offer" value="true">
         </div><br>
         <input type="text" placeholder="Link da imagem" name="image"><br><br>
 
