--- a/petsecommerce/src/main/resources/templates/main/register.html
+++ b/petsecommerce/src/main/resources/templates/main/register.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" th:href="@{/css/fragments/fragment.css}">
-    <link rel="stylesheet" th:href="@{/css/register/style.css}">
+    <link rel="stylesheet" th:href="@{/css/main/fragments/fragment.css}">
+    <link rel="stylesheet" th:href="@{/css/main/register/style.css}">
     <title>Pets - Cadastro</title>
 </head>
 <body>
-    <div th:replace="~{fragments/base :: navbar}"></div>
+    <div th:replace="~{main/fragments/base :: navbar}"></div>
 
     <div class="register-area">
         <div class="left-side">
@@ -67,6 +67,6 @@
     </div>
 
 
-    <div th:replace="~{fragments/base :: footer}"></div>
+    <div th:replace="~{main/fragments/base :: footer}"></div>
 </body>
 </html>
