--- a/petsecommerce/src/main/resources/templates/admin/user/get-users.html
+++ b/petsecommerce/src/main/resources/templates/admin/user/get-users.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin - users</title>
+    <link rel="stylesheet" th:href="@{/css/admin/fragments/fragment.css}">
+    <title>Admin - get users</title>
 </head>
 <body>
+    <div th:replace="~{admin/fragments/base-admin :: navbar}"></div>
+
     <div th:each="p : ${users}">
         <ul>
             <li th:text="${p}"></li>
