--- a/petsecommerce/src/main/resources/templates/admin/user/users.html
+++ b/petsecommerce/src/main/resources/templates/admin/user/users.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="https://www.thymeleaf.org" lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" th:href="@{/css/admin/fragments/fragment.css}">
-    <title>Admin - Home</title>
+    <title>Admin - users</title>
 </head>
 <body>
     <div th:replace="~{admin/fragments/base-admin :: navbar}"></div>
 
-    <h1>Home Admin</h1>
+    <h1>User home</h1>
+    
+    <ul>
+        <li><a th:href="@{/admin/users/all}">Todos os usuários</a></li>
+    </ul>
 </body>
 </html>
