--- a/petsecommerce/src/main/resources/templates/main/login.html
+++ b/petsecommerce/src/main/resources/templates/main/login.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" th:href="@{/css/fragments/fragment.css}">
-    <link rel="stylesheet" th:href="@{/css/login/style.css}">
+    <link rel="stylesheet" th:href="@{/css/main/fragments/fragment.css}">
+    <link rel="stylesheet" th:href="@{/css/main/login/style.css}">
     <title>Pets - Login</title>
 </head>
 <body>
-    <div th:replace="~{fragments/base :: navbar}"></div>
+    <div th:replace="~{main/fragments/base :: navbar}"></div>
 
     <div class="login-area">
         <h2>Login</h2>
@@ -44,5 +44,7 @@
             </div>
         </form>
     </div>
+
+    <div th:replace="~{main/fragments/base :: footer}"></div>
 </body>
 </html>
