feat: put product method

--- a/petsecommerce/src/main/resources/templates/admin/product/products.html
+++ b/petsecommerce/src/main/resources/templates/admin/product/products.html
@@ -14,7 +14,7 @@
     <ul>
         <li><a th:href="@{/admin/product/all}">Todos os produtos</a></li>
         <li><a th:href="@{/admin/product/create}">Adicionar produto</a></li>
-        <li><a th:href="@{/admin/product/edit}">Editar produto</a></li>
+        <li><a th:href="@{/admin/product/edit/1}">Editar produto</a></li>
         <li><a th:href="@{/admin/product/remove}">Deletar produto</a></li>
     </ul>
 
