--- a/petsecommerce/src/main/resources/templates/admin/product/products.html
+++ b/petsecommerce/src/main/resources/templates/admin/product/products.html
@@ -4,19 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" th:href="@{/css/admin/fragments/fragment.css}">
-    <title>Admin - Produtos Home</title>
+    <link rel="stylesheet" th:href="@{/css/admin/products/home.css}">
+    <title>Admin - Produtos</title>
 </head>
 <body>
     <div th:replace="~{admin/fragments/base-admin :: navbar}"></div>
 
-    <h1>Product Home</h1>
+    <h1>Todos os produtos:</h1>
 
-    <ul>
-        <li><a th:href="@{/admin/product/all}">Todos os produtos</a></li>
-        <li><a th:href="@{/admin/product/create}">Adicionar produto</a></li>
-        <li><a th:href="@{/admin/product/edit/1}">Editar produto</a></li>
-        <li><a th:href="@{/admin/product/remove}">Deletar produto</a></li>
-    </ul>
+
+    <table border="1">
+        <thead>
+            <tr>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th>ID</th>
+                <th>Nome</th>
+                <th>Cor</th>
+                <th>Tamanho</th>
+                <th>Oferta</th>
+                <th>Imagem</th>
+                <th>Preço</th>
+                <th>Preço de desconto</th>
+                <th>Preço antigo</th>
+                <th>Início de oferta</th>
+                <th>Expiração de oferta</th>
+                <th>Categoria</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="product : ${products}">
+                <td><a th:href="@{/admin/product/create}"><img th:src="@{/pictures/icons/add.png}" alt="Add" class="icon"></a></td>
+                <td><a th:href="@{'/admin/product/edit/' + ${product.id}}"><img th:src="@{/pictures/icons/edit.png}" alt="Edit" class="icon"></a></td>
+                <td><a th:href="@{'/admin/delete/' + ${product.id} + '/confirm'}"><img th:src="@{/pictures/icons/remove.png}" alt="Delete" class="icon"></a></td>
+                <td th:text="${product.id}"></td>
+                <td th:text="${product.name}"></td>
+                <td th:text="${product.color}"></td>
+                <td th:text="${product.size}"></td>
+                <td th:text="${product.offer}"></td>
+                <td th:text="${product.price}"></td>
+                <td><img th:src="@{${product.image}}" alt="Product Image" style="width: 100px; height: auto;"></td>
+                <td th:text="${product.discountPrice}"></td>
+                <td th:text="${product.previousPrice}"></td>
+                <td th:text="${product.initialOffer}"></td>
+                <td th:text="${product.expirationOffer}"></td>
+                <td th:text="${product.category.name}"></td>
+            </tr>
+        </tbody>
+    </table>
+
+    <!-- <div th:each="p : ${products}">
+        <div th:text="${p}"></div>
+    </div> -->
+
 
 </body>
 </html>
