--- a/petsecommerce/src/main/resources/templates/admin/product/products.html
+++ b/petsecommerce/src/main/resources/templates/admin/product/products.html
@@ -10,13 +10,14 @@
 <body>
     <div th:replace="~{admin/fragments/base-admin :: navbar}"></div>
 
-    <h1>Todos os produtos:</h1>
+    <div class="title">
+        <h1>Todos os produtos:</h1>
+        <a class="add-product-link" th:href="@{/admin/product/create}"><img th:src="@{/pictures/icons/plus.png}">Adicionar produto</a>
+    </div>
 
-
-    <table border="1">
+    <table>
         <thead>
             <tr>
-                <th></th>
                 <th></th>
                 <th></th>
                 <th>ID</th>
@@ -35,7 +36,6 @@
         </thead>
         <tbody>
             <tr th:each="product : ${products}">
-                <td><a th:href="@{/admin/product/create}"><img th:src="@{/pictures/icons/add.png}" alt="Add" class="icon"></a></td>
                 <td><a th:href="@{'/admin/product/edit/' + ${product.id}}"><img th:src="@{/pictures/icons/edit.png}" alt="Edit" class="icon"></a></td>
                 <td><a th:href="@{'/admin/delete/' + ${product.id} + '/confirm'}"><img th:src="@{/pictures/icons/remove.png}" alt="Delete" class="icon"></a></td>
                 <td th:text="${product.id}"></td>
@@ -53,11 +53,5 @@
             </tr>
         </tbody>
     </table>
-
-    <!-- <div th:each="p : ${products}">
-        <div th:text="${p}"></div>
-    </div> -->
-
-
 </body>
 </html>
