feat: create cart/product basic page and update main page with database real products

--- a/petsecommerce/src/main/resources/static/css/main/home/style.css
+++ b/petsecommerce/src/main/resources/static/css/main/home/style.css
@@ -103,7 +103,7 @@ main article {
     margin-top: 20px;
 }
 
-.p-buy-line button {
+.p-buy-line a {
     background-color: #00000075;
     color: #fff;
     width: 100%;
