--- a/petsecommerce/src/main/resources/static/css/main/fragments/fragment.css
+++ b/petsecommerce/src/main/resources/static/css/main/fragments/fragment.css
@@ -54,6 +54,33 @@
     text-decoration: underline;
 }
 
+.acc-auth {
+    /* background-color: red; */
+    display: flex;
+    align-items: center;
+    list-style: none;
+    gap: 30px;
+    
+}
+
+#cart-image {
+    width: 30px;
+    display: block;
+}
+
+#cart-image img{
+    width: 100%;
+    height: 100%;
+}
+
+#profile-image {
+    width: 40px;
+    border: 1px solid #000;
+    /* border-radius: 50%; */
+    padding: 20px;
+    cursor: pointer;
+}
+
 .search-bar {
     width: 15%;
     position: relative;
