--- a/petsecommerce/src/main/resources/templates/main/home.html
+++ b/petsecommerce/src/main/resources/templates/main/home.html
@@ -41,7 +41,7 @@
 							</div>
 							<div class="p-buy-line">
 								<a th:href="@{'/carrinho/add/' + ${p.id}}">Adicionar ao carrinho</a>
-								<a th:href="@{'/produto/id=' + ${p.id}}"></a>
+								<a th:href="@{'/produto/id=' + ${p.id}}">Comprar Produto</a>
 							</div>
 						</div>
 					</div>
