--- a/petsecommerce/src/main/resources/templates/main/product-page-buy.html
+++ b/petsecommerce/src/main/resources/templates/main/product-page-buy.html
@@ -17,7 +17,7 @@
    </div>
 
    <a th:href="@{/produto/comprar}">Comprar produto</a>
-   <a th:href="@{'/produto/add/' + ${product.id}}">Adicionar ao carrinho</a>
+   <a th:href="@{'/carrinho/add/' + ${product.id}}">Adicionar ao carrinho</a>
 
 <!--    <div th:replace="~{main/fragments/base :: footer}"></div>-->
 </body>
