--- a/petsecommerce/src/main/resources/templates/main/cart.html
+++ b/petsecommerce/src/main/resources/templates/main/cart.html
@@ -14,5 +14,7 @@
     </ul>
 
     <!-- <div th:replace="~{main/fragments/base :: footer}"></div> -->
+
+    <script th:src="@{/js/main/header.js}"></script>
 </body>
 </html>
