--- a/petsecommerce/src/main/resources/templates/main/home.html
+++ b/petsecommerce/src/main/resources/templates/main/home.html
@@ -52,5 +52,6 @@
 
 	<div th:replace="~{main/fragments/base :: footer}"></div>
 	
+	<script th:src="@{/js/main/header.js}"></script>
 </body>
 </html>
