--- a/petsecommerce/src/main/resources/templates/main/login.html
+++ b/petsecommerce/src/main/resources/templates/main/login.html
@@ -46,5 +46,7 @@
     </div>
 
     <div th:replace="~{main/fragments/base :: footer}"></div>
+
+    <script th:src="@{/js/main/header.js}"></script>
 </body>
 </html>
