--- a/petsecommerce/src/main/resources/templates/main/product-page-buy.html
+++ b/petsecommerce/src/main/resources/templates/main/product-page-buy.html
@@ -20,5 +20,7 @@
    <a th:href="@{'/carrinho/add/' + ${product.id}}">Adicionar ao carrinho</a>
 
 <!--    <div th:replace="~{main/fragments/base :: footer}"></div>-->
+
+    <script th:src="@{/js/main/header.js}"></script>
 </body>
 </html>
