--- a/petsecommerce/src/main/resources/templates/main/register.html
+++ b/petsecommerce/src/main/resources/templates/main/register.html
@@ -68,5 +68,7 @@
 
 
     <div th:replace="~{main/fragments/base :: footer}"></div>
+
+    <script th:src="@{/js/main/header.js}"></script>
 </body>
 </html>
