--- a/petsecommerce/src/main/resources/templates/main/fragments/base.html
+++ b/petsecommerce/src/main/resources/templates/main/fragments/base.html
@@ -25,8 +25,17 @@
 
     <ul th:if="${isAuth}" class="acc-auth">
         <li><a id="cart-image" th:href="@{/carrinho}"><img th:src="@{/pictures/icons/cart.png}" alt="carrinho"></a></li>
-        <li><img id="profile-image" th:src="@{/pictures/icons/profile.png}" alt="imagem de perfil" th:title="${profileUsername}"></li>
-        <!-- <span th:text="${profileUsername}"></span> -->
+        <li id="profile-options-open" onclick="profileOptionsCard()"><img id="profile-image" th:src="@{/pictures/icons/profile.png}" alt="imagem de perfil" th:title="${profileUsername}"></li>
+
+        <div class="profile-options-card">
+            <span id="profile-username" th:text="${profileUsername}"></span>
+            <ul>
+                <li><a th:href="@{/perfil}">Perfil</a></li>
+                <li><a th:href="@{/carrinho}">Carrinho</a></li>
+                <li><a th:href="@{/}">Meus pedidos</a></li>
+                <li><a th:href="@{/logout}">Encerrar sessão</a></li>
+            </ul>
+        </div>
     </ul>
 </header>
 
@@ -57,3 +66,6 @@
         </div>
     </div>
 </footer>
+
+
+
