feat: implement frontend buy product cart for cart page

--- a/petsecommerce/src/main/resources/templates/main/cart.html
+++ b/petsecommerce/src/main/resources/templates/main/cart.html
@@ -67,17 +67,20 @@
 				</div>
 			</div>
 
-
 			<div class="cart-buy">
-				<div class="buy-info">
-					<span>Subtotal (2 produtos): R$ 152,99</span>
-					<span>Frete: R$ 3,99</span>
+				<div class="cart-buy-info">
+					<div class="pclose-subtotal">
+						<span id="pclose-subtotal-title">Subtotal (2 produtos):</span>
+						<span id="pclose-subtotal-price">R$ 152,99</span>
+					</div>
+					<div class="pclose-delivery">
+						<span id="pclose-delivery-title">Frete:</span>
+						<span id="pclose-delivery-price">R$ 3,99</span>
+					</div>
 				</div>
 				<input type="submit" value="Finalizar Pedido">
 			</div>
-
 		</div>
-
 	</main>
 
 	<!-- <div th:replace="~{main/fragments/base :: footer}"></div> -->
