--- a/petsecommerce/src/main/resources/static/css/main/cart/cart-page.css
+++ b/petsecommerce/src/main/resources/static/css/main/cart/cart-page.css
@@ -155,3 +155,29 @@ main {
 	border: 1px solid #a0a0a099;
 }
 
+.cart-buy-info {
+
+}
+
+.pclose-subtotal, .pclose-delivery {
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 10px;
+}
+
+#pclose-subtotal-price, #pclose-delivery-price {
+	font-weight: 600;
+}
+
+.cart-buy input {
+	background-color: #fce9d1;
+	border: solid 1px #000;
+	padding: 10px;
+	width: 100%;
+	cursor: pointer;
+	margin-top: 20px;
+}
+
+.cart-buy input:hover {
+	background-color: #ffffffc0;
+}
