--- a/petsecommerce/src/main/resources/static/css/main/cart/cart-page.css
+++ b/petsecommerce/src/main/resources/static/css/main/cart/cart-page.css
@@ -68,9 +68,17 @@ main {
 }
 
 .product-info {
+	/* background-color: red; */
+	display: flex;
+	gap: 5px;
 	width: 100%;
 	margin-bottom: 30px;
-	font-size: 25px;
+	font-size: 21px;
+}
+
+#p-title, #p-color, #p-category {
+	font-size: 17px;
+	font-weight: 400;
 }
 
 /* product actions */
@@ -124,7 +132,6 @@ main {
 	font-weight: bold;
 }
 
-
 /* price */
 .product-cart-right {
 	display: flex;
@@ -143,8 +150,6 @@ main {
 	font-weight: 600;
 }
 
-
-
 /* Cart Buy */
 .cart-buy {
 	background-color: #fdc0ff;
@@ -153,10 +158,7 @@ main {
 	box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 	border-radius: 12px;
 	border: 1px solid #a0a0a099;
-}
-
-.cart-buy-info {
-
+	height: 200px;
 }
 
 .pclose-subtotal, .pclose-delivery {
@@ -170,7 +172,7 @@ main {
 }
 
 .cart-buy input {
-	background-color: #fce9d1;
+	background-color: #fff;
 	border: solid 1px #000;
 	padding: 10px;
 	width: 100%;
